--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ aiogram==3.3.0
 Flask==2.3.2
 gunicorn==20.1.0
 redis==4.5.0
-aiohttp~=3.9.0
 python-dotenv==1.0.0
+aiohttp~=3.9.0
+pydantic==1.10.13
