--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Flask==2.3.2
 gunicorn==20.1.0
 redis==4.5.0
 python-dotenv==1.0.0
-aiohttp~=3.9.0
-pydantic==1.10.13
+aiohttp==3.9.5
+pydantic==2.5.3
+uvicorn==0.22.0
