--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 aiogram==3.3.0
+aiohttp==3.9.5
 Flask==2.3.2
 gunicorn==20.1.0
 redis==4.5.0
 python-dotenv==1.0.0
-aiohttp==3.9.5
 pydantic==2.5.3
+pydantic-core==2.14.6
 uvicorn==0.22.0
